--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-BubiRacun.pro.user
-BubiRacun.pro.user.1.3
-BubiRacun.pro.user.2.5pre1
+﻿# C++ objects and libs
+
+*.slo
+*.lo
+*.o
+*.a
+*.la
+*.lai
+*.so
+*.dll
+*.dylib
+
+# Qt-es
+
+*.pro.user
+*.pro.user.*
+moc_*.cpp
+qrc_*.cpp
+Makefile
+*-build-*
